--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": " Competitive's Calender",
+  "name": "contest  Scheduler ",
   "description": "Displays live and upcoming Programming Contests happening on a variety of popular platforms. HAPPY CODING!!",
-  "version": "0.0.0.1",
+  "version": "1.0.0",
   "manifest_version": 2,
   "browser_action": {
     "default_popup": "index.html",
